--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 				<p>Dynameh works with the existing <a href="http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB.html">DynamoDB JavaScript API</a> and its objects rather than wrapping them and hiding the details.  The goal is to make the existing API easier to work with where naturally possible, without ever limiting its power.  Obscure and rarely used flags are still accessible while common operations are quicker to write.</p>
 				<p>Dynameh makes it easier to:</p>
 				<ul>
-					<li>build request objects</li>
-					<li>unwrap response objects</li>
-					<li>run large batch requests</li>
-					<li>run requests concurrently that can&#39;t be run in batch</li>
-					<li>implement optimistic locking</li>
-					<li>configure Date serialization</li>
+					<li><a href="https://giftbit.github.io/dynameh/modules/_requestbuilder_.html">build request objects</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/modules/_responseunwrapper_.html">unwrap response objects</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/modules/_batchhelper_.html">run large batch requests</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/modules/_concurrenthelper_.html">run requests concurrently that can&#39;t be run in batch</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/interfaces/_tableschema_.tableschema.html#versionkeyfield">implement optimistic locking</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/interfaces/_tableschema_.tableschema.html#dateserializationfunction">configure Date serialization</a></li>
 				</ul>
 				<h2 id="installation">Installation</h2>
 				<p>Dynameh is your typical NPM package.</p>
