--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -80,8 +80,12 @@
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#builddeleteinput" class="tsd-kind-icon">build<wbr>Delete<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildgetinput" class="tsd-kind-icon">build<wbr>Get<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildputinput" class="tsd-kind-icon">build<wbr>Put<wbr>Input</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildqueryinput" class="tsd-kind-icon">build<wbr>Query<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildrequestputitem" class="tsd-kind-icon">build<wbr>Request<wbr>Put<wbr>Item</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#jstypetoddbtype" class="tsd-kind-icon">js<wbr>Type<wbr>ToDdb<wbr>Type</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#operatorisfunction" class="tsd-kind-icon">operator<wbr>IsFunction</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#operatorparamcount" class="tsd-kind-icon">operator<wbr>Param<wbr>Count</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#paramkey" class="tsd-kind-icon">param<wbr>Key</a></li>
 							</ul>
 						</section>
 					</div>
@@ -99,7 +103,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L198">requestBuilder.ts:198</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L288">requestBuilder.ts:288</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -134,7 +138,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L238">requestBuilder.ts:238</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L328">requestBuilder.ts:328</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -169,7 +173,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L173">requestBuilder.ts:173</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L263">requestBuilder.ts:263</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -204,7 +208,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L275">requestBuilder.ts:275</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L365">requestBuilder.ts:365</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -235,7 +239,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L149">requestBuilder.ts:149</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L150">requestBuilder.ts:150</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -276,7 +280,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L77">requestBuilder.ts:77</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L78">requestBuilder.ts:78</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -317,7 +321,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L101">requestBuilder.ts:101</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L102">requestBuilder.ts:102</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -340,6 +344,58 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="buildqueryinput" class="tsd-anchor"></a>
+					<h3>build<wbr>Query<wbr>Input</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Query<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, primaryKeyValue<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a>, sortKeyOp<span class="tsd-signature-symbol">?: </span><a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a>, <span class="tsd-signature-symbol">...</span>sortKeyValues<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.QueryInput</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L183">requestBuilder.ts:183</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Build a request object that can be passed into <code>query</code>.  The query operation performs
+										an efficient search on one partition key value with an optional condition on the sort
+									key.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+								</li>
+								<li>
+									<h5>primaryKeyValue: <a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>the hash key of the item to get</p>
+									</div>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> sortKeyOp: <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>the operator that can be used to constrain results.  Must be one of:
+											<code>&quot;=&quot;, &quot;&lt;&quot;, &quot;&lt;=&quot;, &quot;&gt;&quot;, &quot;&gt;=&quot;, &quot;BETWEEN&quot;, &quot;begins_with&quot;</code>.  If not defined
+										all sort key values will be returned.</p>
+									</div>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagRest">Rest</span> <span class="tsd-signature-symbol">...</span>sortKeyValues: <a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">[]</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>values the sortKeyOp works on.  This must be 2 values for
+										<code>BETWEEN</code> and 1 for all other operators.</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">aws.DynamoDB.Types.QueryInput</span></h4>
+							<p>input for the <code>query</code> method</p>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="buildrequestputitem" class="tsd-anchor"></a>
 					<h3>build<wbr>Request<wbr>Put<wbr>Item</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
@@ -349,7 +405,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L19">requestBuilder.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L20">requestBuilder.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -381,13 +437,82 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/requestBuilder.ts#L312">requestBuilder.ts:312</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L402">requestBuilder.ts:402</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>t: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="operatorisfunction" class="tsd-anchor"></a>
+					<h3>operator<wbr>IsFunction</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">operator<wbr>IsFunction<span class="tsd-signature-symbol">(</span>op<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L243">requestBuilder.ts:243</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>op: <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="operatorparamcount" class="tsd-anchor"></a>
+					<h3>operator<wbr>Param<wbr>Count</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">operator<wbr>Param<wbr>Count<span class="tsd-signature-symbol">(</span>op<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L236">requestBuilder.ts:236</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>op: <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="paramkey" class="tsd-anchor"></a>
+					<h3>param<wbr>Key</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">param<wbr>Key<span class="tsd-signature-symbol">(</span>ix<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L250">requestBuilder.ts:250</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>ix: <span class="tsd-signature-type">number</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -452,10 +577,22 @@
 						<a href="_requestbuilder_.html#buildputinput" class="tsd-kind-icon">build<wbr>Put<wbr>Input</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_requestbuilder_.html#buildqueryinput" class="tsd-kind-icon">build<wbr>Query<wbr>Input</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_requestbuilder_.html#buildrequestputitem" class="tsd-kind-icon">build<wbr>Request<wbr>Put<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="_requestbuilder_.html#jstypetoddbtype" class="tsd-kind-icon">js<wbr>Type<wbr>ToDdb<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_requestbuilder_.html#operatorisfunction" class="tsd-kind-icon">operator<wbr>IsFunction</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_requestbuilder_.html#operatorparamcount" class="tsd-kind-icon">operator<wbr>Param<wbr>Count</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_requestbuilder_.html#paramkey" class="tsd-kind-icon">param<wbr>Key</a>
 					</li>
 				</ul>
 			</nav>
