--- a/modules/_validation_.html
+++ b/modules/_validation_.html
@@ -75,16 +75,26 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamokey" class="tsd-kind-icon">Dynamo<wbr>Key</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamokeypair" class="tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_validation_.html#queryconditionoperators" class="tsd-kind-icon">query<wbr>Condition<wbr>Operators</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkqueryconditionoperator" class="tsd-kind-icon">check<wbr>Query<wbr>Condition<wbr>Operator</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschema" class="tsd-kind-icon">check<wbr>Schema</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemaitemagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Item<wbr>Agreement</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemaitemsagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Items<wbr>Agreement</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemakeyagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Key<wbr>Agreement</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemakeysagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Keys<wbr>Agreement</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemaprimarykeyagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Primary<wbr>Key<wbr>Agreement</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemasortkeyagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Sort<wbr>Key<wbr>Agreement</a></li>
 							</ul>
 						</section>
 					</div>
@@ -98,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L3">validation.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L3">validation.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -108,13 +118,59 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">[</span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">, </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L4">validation.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L4">validation.ts:4</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
+					<a name="dynamoqueryconditionoperator" class="tsd-anchor"></a>
+					<h3>Dynamo<wbr>Query<wbr>Condition<wbr>Operator</h3>
+					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L5">validation.ts:5</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="queryconditionoperators" class="tsd-anchor"></a>
+					<h3>query<wbr>Condition<wbr>Operators</h3>
+					<div class="tsd-signature tsd-kind-icon">query<wbr>Condition<wbr>Operators<span class="tsd-signature-symbol">:</span> <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;&#x3D;&quot;, &quot;&lt;&quot;, &quot;&lt;&#x3D;&quot;, &quot;&gt;&quot;, &quot;&gt;&#x3D;&quot;, &quot;BETWEEN&quot;, &quot;begins_with&quot;]</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L7">validation.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="checkqueryconditionoperator" class="tsd-anchor"></a>
+					<h3>check<wbr>Query<wbr>Condition<wbr>Operator</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">check<wbr>Query<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">(</span>op<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L145">validation.ts:145</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>op: <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="checkschema" class="tsd-anchor"></a>
 					<h3>check<wbr>Schema</h3>
@@ -125,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L6">validation.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L9">validation.ts:9</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -148,7 +204,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L88">validation.ts:88</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L106">validation.ts:106</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -179,7 +235,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L112">validation.ts:112</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L130">validation.ts:130</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -210,7 +266,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L36">validation.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L39">validation.ts:39</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -244,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/validation.ts#L55">validation.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L73">validation.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -259,6 +315,68 @@
 								</li>
 								<li>
 									<h5>keyValues: <a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> | </span><a href="_validation_.html#dynamokeypair" class="tsd-signature-type">DynamoKeyPair</a><span class="tsd-signature-symbol">[]</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="checkschemaprimarykeyagreement" class="tsd-anchor"></a>
+					<h3>check<wbr>Schema<wbr>Primary<wbr>Key<wbr>Agreement</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">check<wbr>Schema<wbr>Primary<wbr>Key<wbr>Agreement<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, primaryKeyValue<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L55">validation.ts:55</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Assumes checkSchema(tableSchema) has already been run.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+								</li>
+								<li>
+									<h5>primaryKeyValue: <a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="checkschemasortkeyagreement" class="tsd-anchor"></a>
+					<h3>check<wbr>Schema<wbr>Sort<wbr>Key<wbr>Agreement</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">check<wbr>Schema<wbr>Sort<wbr>Key<wbr>Agreement<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, sortKeyValue<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/validation.ts#L64">validation.ts:64</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Assumes checkSchema(tableSchema) has already been run.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+								</li>
+								<li>
+									<h5>sortKeyValue: <a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -307,6 +425,15 @@
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
 						<a href="_validation_.html#dynamokeypair" class="tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair</a>
 					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
+						<a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_validation_.html#queryconditionoperators" class="tsd-kind-icon">query<wbr>Condition<wbr>Operators</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_validation_.html#checkqueryconditionoperator" class="tsd-kind-icon">check<wbr>Query<wbr>Condition<wbr>Operator</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_validation_.html#checkschema" class="tsd-kind-icon">check<wbr>Schema</a>
 					</li>
@@ -321,6 +448,12 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_validation_.html#checkschemakeysagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Keys<wbr>Agreement</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_validation_.html#checkschemaprimarykeyagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Primary<wbr>Key<wbr>Agreement</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_validation_.html#checkschemasortkeyagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Sort<wbr>Key<wbr>Agreement</a>
 					</li>
 				</ul>
 			</nav>
