--- a/modules/_batchhelper_.html
+++ b/modules/_batchhelper_.html
@@ -75,6 +75,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_batchhelper_.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_batchhelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_batchhelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_batchhelper_.html#batchgetlimit" class="tsd-kind-icon">batch<wbr>Get<wbr>Limit</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_batchhelper_.html#batchwritelimit" class="tsd-kind-icon">batch<wbr>Write<wbr>Limit</a></li>
 							</ul>
@@ -98,27 +99,44 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L22">batchHelper.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L29">batchHelper.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>The wait growth factor when repeatedly backing off.</p>
+							<p>The wait growth factor when repeatedly backing off.  When backing off
+								from an operation the first wait will be <code>backoff = backoffInitial</code>
+							and for each consecutive wait <code>backoff = Math.min(backoff * backoffFactor, backoffMax)</code>.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backoffinitial" class="tsd-anchor"></a>
 					<h3>backoff<wbr>Initial</h3>
-					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2000</span></div>
+					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L17">batchHelper.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L17">batchHelper.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>The initial wait when backing off on request rate.</p>
+							<p>The initial wait when backing off on request rate, in milliseconds.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
+					<a name="backoffmax" class="tsd-anchor"></a>
+					<h3>backoff<wbr>Max</h3>
+					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;30000</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L22">batchHelper.ts:22</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The maximum wait when backing off on request rate, in milliseconds.</p>
 						</div>
 					</div>
 				</section>
@@ -128,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">batch<wbr>Get<wbr>Limit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">100</span><span class="tsd-signature-symbol"> =&nbsp;100</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L7">batchHelper.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L7">batchHelper.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -143,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">batch<wbr>Write<wbr>Limit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> =&nbsp;25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L12">batchHelper.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L12">batchHelper.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -165,7 +183,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L31">batchHelper.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L38">batchHelper.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -198,7 +216,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L75">batchHelper.ts:75</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L82">batchHelper.ts:82</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -232,7 +250,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c0b9578/src/batchHelper.ts#L104">batchHelper.ts:104</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/batchHelper.ts#L111">batchHelper.ts:111</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -286,6 +304,9 @@
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_batchhelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="_batchhelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_batchhelper_.html#batchgetlimit" class="tsd-kind-icon">batch<wbr>Get<wbr>Limit</a>
